SVN_SILENT made messages (.desktop file)
svn path=/branches/KDE/4.2/kdeaccessibility/kmouth/; revision=929342

--- a/books/de.desktop
+++ b/books/de.desktop
@@ -47,6 +47,8 @@ Name[ro]=Germană
 Name[ru]=Немецкий
 Name[sk]=Nemecky
 Name[sl]=nemško
+Name[sr]=немачки
+Name[sr@latin]=nemački
 Name[sv]=Tyska
 Name[ta]=ஜெர்மன்
 Name[tg]=Немисӣ
