--- a/books/en.desktop
+++ b/books/en.desktop
@@ -48,6 +48,8 @@ Name[ro]=Engleză
 Name[ru]=Английский
 Name[sk]=Anglicky
 Name[sl]=angleško
+Name[sr]=енглески
+Name[sr@latin]=engleski
 Name[sv]=Engelska
 Name[ta]=ஆங்கிலம்
 Name[tg]=Англисӣ
