--- a/books/nl.desktop
+++ b/books/nl.desktop
@@ -46,6 +46,8 @@ Name[ro]=Olandeză
 Name[ru]=Голландский
 Name[sk]=Holandsky
 Name[sl]=Nizozemsko
+Name[sr]=холандски
+Name[sr@latin]=holandski
 Name[sv]=Holländska
 Name[tg]=Немисӣ
 Name[tr]=Flemenkçe
