--- a/kmouth.desktop
+++ b/kmouth.desktop
@@ -18,6 +18,8 @@ Name[ml]=കെമൌത്ത്
 Name[ne]=केडीई माउथ
 Name[pa]=ਕੇ-ਮੂੰਹ
 Name[ro]=Vorbitor
+Name[sr]=К‑уста
+Name[sr@latin]=K‑usta
 Name[sv]=Kmouth
 Name[ta]=K வாய்
 Name[tg]=KДаҳон
@@ -69,6 +71,8 @@ GenericName[ro]=Interfaţă pentru sinteză vocală
 GenericName[ru]=Интерфейс к синтезаторам речи
 GenericName[sk]=Rozhranie pre syntezátor reči
 GenericName[sl]=Vmesnik za sintezo govora
+GenericName[sr]=Сучеље за синтетизаторе говора
+GenericName[sr@latin]=Sučelje za sintetizatore govora
 GenericName[sv]=Gränssnitt för talsyntes
 GenericName[tg]=Сухани Синтезатори Пешбуда
 GenericName[tr]=Konuşma Sentezleyici Arayüzü
