--- a/books/sv.desktop
+++ b/books/sv.desktop
@@ -48,6 +48,8 @@ Name[ro]=Suedeză
 Name[ru]=Шведский
 Name[sk]=Švédsky
 Name[sl]=švedsko
+Name[sr]=шведски
+Name[sr@latin]=švedski
 Name[sv]=Svenska
 Name[ta]=ஸ்வீடிஷ்
 Name[tg]=Шведӣ
