SVN_SILENT made messages (.desktop file)
svn path=/branches/KDE/4.2/kdeaccessibility/kmouth/; revision=935451

--- a/books/de.desktop
+++ b/books/de.desktop
@@ -21,6 +21,7 @@ Name[ga]=Gearmáinis
 Name[gl]=Alemán
 Name[he]=גרמנית
 Name[hi]=जर्मन
+Name[hne]=जर्मन
 Name[hu]=Német
 Name[is]=Þýska
 Name[it]=Tedesco
