--- a/books/nl.desktop
+++ b/books/nl.desktop
@@ -20,6 +20,7 @@ Name[ga]=Ollainnis
 Name[gl]=Holandés
 Name[he]=דנית
 Name[hi]=डच
+Name[hne]=डच
 Name[hu]=Holland
 Name[is]=Hollenska
 Name[it]=Olandese
