--- a/books/sv.desktop
+++ b/books/sv.desktop
@@ -22,6 +22,7 @@ Name[ga]=Sualainnis
 Name[gl]=Sueco
 Name[he]=שוודית
 Name[hi]=स्वीडिश
+Name[hne]=स्वीडिस
 Name[hu]=Svéd
 Name[is]=Sænska
 Name[it]=Svedese
