--- a/kmouth.desktop
+++ b/kmouth.desktop
@@ -12,6 +12,7 @@ Name[cy]=KCeg
 Name[eo]=KBuŝo
 Name[es]=KMouth 
 Name[hi]=के-माउथ
+Name[hne]=के-माउथ
 Name[is]=KMunnur
 Name[km]= KMouth
 Name[ml]=കെമൌത്ത്
@@ -46,6 +47,7 @@ GenericName[fr]=Interface graphique de synthèse vocale
 GenericName[ga]=Comhéadan Sintéiseora Cainte
 GenericName[gl]=Interface para o sintetizador de voz
 GenericName[hi]=स्पीच सिंथेसाइज़र फ्रण्टएंड
+GenericName[hne]=स्पीच सिंथेसाइजर फ्रन्टवड
 GenericName[hu]=Beszédszintetizátor
 GenericName[is]=Viðmót á talgerfilinn
 GenericName[it]=Interfaccia grafica per il sintetizzatore vocale
