--- a/books/en.desktop
+++ b/books/en.desktop
@@ -22,6 +22,7 @@ Name[ga]=Béarla
 Name[gl]=Inglés
 Name[he]=אנגלית
 Name[hi]=अंग्रेज़ी
+Name[hne]=अंगरेजी
 Name[hu]=Angol
 Name[is]=Enska
 Name[it]=Inglese
