SVN_SILENT made messages (.desktop file)
svn path=/branches/KDE/4.2/kdeaccessibility/kmouth/; revision=967314

--- a/books/de.desktop
+++ b/books/de.desktop
@@ -31,6 +31,7 @@ Name[ko]=독일어
 Name[ku]=Almanî
 Name[lt]=Vokiečių
 Name[lv]=Vācu
+Name[mai]=जर्मन
 Name[mk]=Германски
 Name[ml]=ജര്‍മ്മന്‍
 Name[ms]=Jerman
