--- a/books/en.desktop
+++ b/books/en.desktop
@@ -32,6 +32,7 @@ Name[ko]=영어
 Name[ku]=Îngilîzî
 Name[lt]=Anglų
 Name[lv]=Angļu
+Name[mai]=अंग्रेजी
 Name[mk]=Англиски
 Name[ml]=ഇംഗ്ലീഷ്
 Name[ms]=Inggeris
