--- a/books/nl.desktop
+++ b/books/nl.desktop
@@ -30,6 +30,7 @@ Name[ko]=네덜란드어
 Name[ku]=Felemenkî
 Name[lt]=Olandų
 Name[lv]=Holandiešu
+Name[mai]=डच
 Name[mk]=Холандски
 Name[ml]=ഡച്ച്
 Name[ms]=Belanda
