--- a/books/sv.desktop
+++ b/books/sv.desktop
@@ -32,6 +32,7 @@ Name[ko]=스웨덴어
 Name[ku]=Swêdî
 Name[lt]=Švedų
 Name[lv]=Zviedru
+Name[mai]=स्वीडिश
 Name[mk]=Шведски
 Name[ml]=സ്വീഡിഷ്
 Name[ms]=Sweden
