SVN_SILENT made messages (.desktop file)
svn path=/branches/KDE/4.3/kdeaccessibility/kmouth/; revision=1024454

--- a/books/de.desktop
+++ b/books/de.desktop
@@ -10,6 +10,7 @@ Name[cy]=Almaeneg
 Name[da]=Tysk
 Name[de]=Deutsch
 Name[el]=Γερμανικά
+Name[en_GB]=German
 Name[eo]=Germana
 Name[es]=Alemán
 Name[et]=Saksa
