--- a/books/en.desktop
+++ b/books/en.desktop
@@ -11,6 +11,7 @@ Name[cy]=Saesneg
 Name[da]=Engelsk
 Name[de]=Englisch
 Name[el]=Αγγλικά
+Name[en_GB]=English
 Name[eo]=Angla
 Name[es]=Inglés
 Name[et]=Inglise
