--- a/books/nl.desktop
+++ b/books/nl.desktop
@@ -10,6 +10,8 @@ Name[cs]=Holandsky
 Name[cy]=Iseldireg
 Name[da]=Hollandsk
 Name[de]=Niederländisch
+Name[el]=Dutch
+Name[en_GB]=Dutch
 Name[es]=Holandés
 Name[et]=Hollandi
 Name[eu]=Nederlandera
