--- a/books/sv.desktop
+++ b/books/sv.desktop
@@ -11,6 +11,7 @@ Name[cy]=Swedeg
 Name[da]=Svensk
 Name[de]=Schwedisch
 Name[el]=Σουηδικά
+Name[en_GB]=Swedish
 Name[eo]=Sveda
 Name[es]=Sueco
 Name[et]=Rootsi
