--- a/kmouth.desktop
+++ b/kmouth.desktop
@@ -8,25 +8,64 @@ Comment=
 Terminal=false
 Name=KMouth
 Name[ar]=فم كي
+Name[be]=KMouth
+Name[bg]=KMouth
+Name[br]=KMouth
+Name[ca]=KMouth
+Name[cs]=KMouth
 Name[cy]=KCeg
+Name[da]=KMouth
+Name[de]=KMouth
+Name[el]=KMouth
+Name[en_GB]=KMouth
 Name[eo]=KBuŝo
 Name[es]=KMouth 
+Name[et]=KMouth
+Name[eu]=KMouth
+Name[fi]=KMouth
+Name[fr]=KMouth
+Name[ga]=KMouth
+Name[gl]=KMouth
+Name[he]=KMouth
 Name[hi]=के-माउथ
 Name[hne]=के-माउथ
+Name[hu]=KMouth
 Name[is]=KMunnur
+Name[it]=KMouth
+Name[ja]=KMouth
 Name[km]= KMouth
+Name[ko]=KMouth
+Name[ku]=KMouth
+Name[lt]=KMouth
+Name[lv]=KMouth
+Name[mk]=KMouth
 Name[ml]=കെമൌത്ത്
+Name[ms]=KMouth
+Name[nb]=KMouth
+Name[nds]=KMouth
 Name[ne]=केडीई माउथ
+Name[nl]=KMouth
+Name[nn]=KMouth
+Name[oc]=KMouth
 Name[pa]=ਕੇ-ਮੂੰਹ
+Name[pl]=KMouth
+Name[pt]=KMouth
+Name[pt_BR]=KMouth
 Name[ro]=Vorbitor
+Name[ru]=KMouth
+Name[sk]=KMouth
+Name[sl]=KMouth
 Name[sr]=К‑уста
 Name[sr@latin]=K‑usta
 Name[sv]=Kmouth
 Name[ta]=K வாய்
 Name[tg]=KДаҳон
+Name[tr]=KMouth
+Name[uk]=KMouth
 Name[vi]=Mồm K
 Name[x-test]=xxKMouthxx
 Name[zh_CN]=K 语音精灵
+Name[zh_TW]=KMouth
 GenericName=Speech Synthesizer Frontend
 GenericName[ar]=واجهة تحليل النطق
 GenericName[bg]=Синтезатор на глас
@@ -46,6 +85,7 @@ GenericName[fi]=Puhesyntetisaattorin käyttöliittymä
 GenericName[fr]=Interface graphique de synthèse vocale
 GenericName[ga]=Comhéadan Sintéiseora Cainte
 GenericName[gl]=Interface para o sintetizador de voz
+GenericName[he]=Speech Synthesizer Frontend
 GenericName[hi]=स्पीच सिंथेसाइज़र फ्रण्टएंड
 GenericName[hne]=स्पीच सिंथेसाइजर फ्रन्टवड
 GenericName[hu]=Beszédszintetizátor
@@ -76,6 +116,7 @@ GenericName[sl]=Vmesnik za sintezo govora
 GenericName[sr]=Сучеље за синтетизаторе говора
 GenericName[sr@latin]=Sučelje za sintetizatore govora
 GenericName[sv]=Gränssnitt för talsyntes
+GenericName[ta]=Speech Synthesizer Frontend
 GenericName[tg]=Сухани Синтезатори Пешбуда
 GenericName[tr]=Konuşma Sentezleyici Arayüzü
 GenericName[uk]=Графічний інтерфейс синтезатора мовлення
