SVN_SILENT made messages (.desktop file)
svn path=/branches/KDE/4.3/kdeaccessibility/kmouth/; revision=1051246

--- a/kmouth.desktop
+++ b/kmouth.desktop
@@ -113,8 +113,8 @@ GenericName[ro]=Interfaţă pentru sinteză vocală
 GenericName[ru]=Интерфейс к синтезаторам речи
 GenericName[sk]=Rozhranie pre syntezátor reči
 GenericName[sl]=Vmesnik za sintezo govora
-GenericName[sr]=Сучеље за синтетизаторе говора
-GenericName[sr@latin]=Sučelje za sintetizatore govora
+GenericName[sr]=Прочеље за синтетизаторе говора
+GenericName[sr@latin]=Pročelje za sintetizatore govora
 GenericName[sv]=Gränssnitt för talsyntes
 GenericName[ta]=Speech Synthesizer Frontend
 GenericName[tg]=Сухани Синтезатори Пешбуда
