--- a/kmouth.desktop
+++ b/kmouth.desktop
@@ -8,6 +8,7 @@ Comment=
 Terminal=false
 Name=KMouth
 Name[ar]=فم كي
+Name[ast]=KMouth
 Name[be]=KMouth
 Name[bg]=KMouth
 Name[br]=KMouth
@@ -68,6 +69,7 @@ Name[zh_CN]=K 语音精灵
 Name[zh_TW]=KMouth
 GenericName=Speech Synthesizer Frontend
 GenericName[ar]=واجهة تحليل النطق
+GenericName[ast]=Interface d'usuariu pa síntesis de voz
 GenericName[bg]=Синтезатор на глас
 GenericName[ca]=Interfície per al sintetitzador de veu
 GenericName[cs]=Rozhraní hlasového syntetizátoru
