SVN_SILENT made messages (.desktop file)
svn path=/branches/KDE/4.4/kdeaccessibility/kmouth/; revision=1071577

--- a/kmouth.desktop
+++ b/kmouth.desktop
@@ -57,6 +57,8 @@ Name[ru]=KMouth
 Name[sk]=KMouth
 Name[sl]=KMouth
 Name[sr]=К‑уста
+Name[sr@ijekavian]=К‑уста
+Name[sr@ijekavianlatin]=K‑usta
 Name[sr@latin]=K‑usta
 Name[sv]=Kmouth
 Name[ta]=K வாய்
@@ -116,6 +118,8 @@ GenericName[ru]=Интерфейс к синтезаторам речи
 GenericName[sk]=Rozhranie pre syntezátor reči
 GenericName[sl]=Vmesnik za sintezo govora
 GenericName[sr]=Прочеље за синтетизаторе говора
+GenericName[sr@ijekavian]=Прочеље за синтетизаторе говора
+GenericName[sr@ijekavianlatin]=Pročelje za sintetizatore govora
 GenericName[sr@latin]=Pročelje za sintetizatore govora
 GenericName[sv]=Gränssnitt för talsyntes
 GenericName[ta]=Speech Synthesizer Frontend
