--- a/books/de.desktop
+++ b/books/de.desktop
@@ -51,6 +51,8 @@ Name[ru]=Немецкий
 Name[sk]=Nemecky
 Name[sl]=nemško
 Name[sr]=немачки
+Name[sr@ijekavian]=њемачки
+Name[sr@ijekavianlatin]=njemački
 Name[sr@latin]=nemački
 Name[sv]=Tyska
 Name[ta]=ஜெர்மன்
