--- a/books/en.desktop
+++ b/books/en.desktop
@@ -52,6 +52,8 @@ Name[ru]=Английский
 Name[sk]=Anglicky
 Name[sl]=angleško
 Name[sr]=енглески
+Name[sr@ijekavian]=енглески
+Name[sr@ijekavianlatin]=engleski
 Name[sr@latin]=engleski
 Name[sv]=Engelska
 Name[ta]=ஆங்கிலம்
