--- a/books/nl.desktop
+++ b/books/nl.desktop
@@ -51,6 +51,8 @@ Name[ru]=Голландский
 Name[sk]=Holandsky
 Name[sl]=Nizozemsko
 Name[sr]=холандски
+Name[sr@ijekavian]=холандски
+Name[sr@ijekavianlatin]=holandski
 Name[sr@latin]=holandski
 Name[sv]=Holländska
 Name[tg]=Немисӣ
