--- a/books/sv.desktop
+++ b/books/sv.desktop
@@ -52,6 +52,8 @@ Name[ru]=Шведский
 Name[sk]=Švédsky
 Name[sl]=švedsko
 Name[sr]=шведски
+Name[sr@ijekavian]=шведски
+Name[sr@ijekavianlatin]=švedski
 Name[sr@latin]=švedski
 Name[sv]=Svenska
 Name[ta]=ஸ்வீடிஷ்
