SVN_SILENT made messages (.desktop file)
svn path=/branches/KDE/4.3/kdeaccessibility/kmouth/; revision=1072387

--- a/books/de.desktop
+++ b/books/de.desktop
@@ -5,6 +5,7 @@ Name[be]=Нямецкая
 Name[bg]=Немски
 Name[br]=Alamaneg
 Name[ca]=Alemany
+Name[ca@valencia]=Alemany
 Name[cs]=Německy
 Name[cy]=Almaeneg
 Name[da]=Tysk
