--- a/books/sv.desktop
+++ b/books/sv.desktop
@@ -6,6 +6,7 @@ Name[be]=Шведская
 Name[bg]=Шведски
 Name[br]=Svedeg
 Name[ca]=Suec
+Name[ca@valencia]=Suec
 Name[cs]=Švédsky
 Name[cy]=Swedeg
 Name[da]=Svensk
