--- a/kmouth.desktop
+++ b/kmouth.desktop
@@ -12,6 +12,7 @@ Name[be]=KMouth
 Name[bg]=KMouth
 Name[br]=KMouth
 Name[ca]=KMouth
+Name[ca@valencia]=KMouth
 Name[cs]=KMouth
 Name[cy]=KCeg
 Name[da]=KMouth
@@ -70,6 +71,7 @@ GenericName=Speech Synthesizer Frontend
 GenericName[ar]=واجهة تحليل النطق
 GenericName[bg]=Синтезатор на глас
 GenericName[ca]=Interfície per al sintetitzador de veu
+GenericName[ca@valencia]=Interfície per al sintetitzador de veu
 GenericName[cs]=Rozhraní hlasového syntetizátoru
 GenericName[cy]=Blaen-wyneb Syntheseisydd Lleferydd
 GenericName[da]=Forende til tale-synthesizer
