SVN_SILENT made messages (.desktop file)
svn path=/branches/KDE/4.4/kdeaccessibility/kmouth/; revision=1072540

--- a/books/nl.desktop
+++ b/books/nl.desktop
@@ -7,6 +7,7 @@ Name[be]=Галандская
 Name[bg]=Холандски
 Name[br]=Nederlandeg
 Name[ca]=Holandès
+Name[ca@valencia]=Holandés
 Name[cs]=Holandsky
 Name[cy]=Iseldireg
 Name[da]=Hollandsk
