--- a/books/en.desktop
+++ b/books/en.desktop
@@ -7,6 +7,7 @@ Name[be]=Англійская
 Name[bg]=Английски
 Name[br]=Saozneg
 Name[ca]=Anglès
+Name[ca@valencia]=Anglés
 Name[cs]=Anglicky
 Name[cy]=Saesneg
 Name[da]=Engelsk
