SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdeaccessibility/kmouth/; revision=1085581

--- a/books/de.desktop
+++ b/books/de.desktop
@@ -6,6 +6,7 @@ Name[be]=Нямецкая
 Name[bg]=Немски
 Name[br]=Alamaneg
 Name[ca]=Alemany
+Name[ca@valencia]=Alemany
 Name[cs]=Německy
 Name[cy]=Almaeneg
 Name[da]=Tysk
@@ -51,6 +52,8 @@ Name[ru]=Немецкий
 Name[sk]=Nemecky
 Name[sl]=nemško
 Name[sr]=немачки
+Name[sr@ijekavian]=њемачки
+Name[sr@ijekavianlatin]=njemački
 Name[sr@latin]=nemački
 Name[sv]=Tyska
 Name[ta]=ஜெர்மன்
