--- a/books/en.desktop
+++ b/books/en.desktop
@@ -7,6 +7,7 @@ Name[be]=Англійская
 Name[bg]=Английски
 Name[br]=Saozneg
 Name[ca]=Anglès
+Name[ca@valencia]=Anglés
 Name[cs]=Anglicky
 Name[cy]=Saesneg
 Name[da]=Engelsk
@@ -52,6 +53,8 @@ Name[ru]=Английский
 Name[sk]=Anglicky
 Name[sl]=angleško
 Name[sr]=енглески
+Name[sr@ijekavian]=енглески
+Name[sr@ijekavianlatin]=engleski
 Name[sr@latin]=engleski
 Name[sv]=Engelska
 Name[ta]=ஆங்கிலம்
