--- a/books/nl.desktop
+++ b/books/nl.desktop
@@ -7,6 +7,7 @@ Name[be]=Галандская
 Name[bg]=Холандски
 Name[br]=Nederlandeg
 Name[ca]=Holandès
+Name[ca@valencia]=Holandés
 Name[cs]=Holandsky
 Name[cy]=Iseldireg
 Name[da]=Hollandsk
@@ -51,6 +52,8 @@ Name[ru]=Голландский
 Name[sk]=Holandsky
 Name[sl]=Nizozemsko
 Name[sr]=холандски
+Name[sr@ijekavian]=холандски
+Name[sr@ijekavianlatin]=holandski
 Name[sr@latin]=holandski
 Name[sv]=Holländska
 Name[tg]=Немисӣ
