--- a/books/sv.desktop
+++ b/books/sv.desktop
@@ -7,6 +7,7 @@ Name[be]=Шведская
 Name[bg]=Шведски
 Name[br]=Svedeg
 Name[ca]=Suec
+Name[ca@valencia]=Suec
 Name[cs]=Švédsky
 Name[cy]=Swedeg
 Name[da]=Svensk
@@ -52,6 +53,8 @@ Name[ru]=Шведский
 Name[sk]=Švédsky
 Name[sl]=švedsko
 Name[sr]=шведски
+Name[sr@ijekavian]=шведски
+Name[sr@ijekavianlatin]=švedski
 Name[sr@latin]=švedski
 Name[sv]=Svenska
 Name[ta]=ஸ்வீடிஷ்
