--- a/kmouth.desktop
+++ b/kmouth.desktop
@@ -13,6 +13,7 @@ Name[be]=KMouth
 Name[bg]=KMouth
 Name[br]=KMouth
 Name[ca]=KMouth
+Name[ca@valencia]=KMouth
 Name[cs]=KMouth
 Name[cy]=KCeg
 Name[da]=KMouth
@@ -57,6 +58,8 @@ Name[ru]=KMouth
 Name[sk]=KMouth
 Name[sl]=KMouth
 Name[sr]=К‑уста
+Name[sr@ijekavian]=К‑уста
+Name[sr@ijekavianlatin]=K‑usta
 Name[sr@latin]=K‑usta
 Name[sv]=Kmouth
 Name[ta]=K வாய்
@@ -72,6 +75,7 @@ GenericName[ar]=واجهة تحليل النطق
 GenericName[ast]=Interface d'usuariu pa síntesis de voz
 GenericName[bg]=Синтезатор на глас
 GenericName[ca]=Interfície per al sintetitzador de veu
+GenericName[ca@valencia]=Interfície per al sintetitzador de veu
 GenericName[cs]=Rozhraní hlasového syntetizátoru
 GenericName[cy]=Blaen-wyneb Syntheseisydd Lleferydd
 GenericName[da]=Forende til tale-synthesizer
@@ -116,6 +120,8 @@ GenericName[ru]=Интерфейс к синтезаторам речи
 GenericName[sk]=Rozhranie pre syntezátor reči
 GenericName[sl]=Vmesnik za sintezo govora
 GenericName[sr]=Прочеље за синтетизаторе говора
+GenericName[sr@ijekavian]=Прочеље за синтетизаторе говора
+GenericName[sr@ijekavianlatin]=Pročelje za sintetizatore govora
 GenericName[sr@latin]=Pročelje za sintetizatore govora
 GenericName[sv]=Gränssnitt för talsyntes
 GenericName[ta]=Speech Synthesizer Frontend
