SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdeaccessibility/kmouth/; revision=1141642

--- a/kmouth.desktop
+++ b/kmouth.desktop
@@ -94,7 +94,7 @@ GenericName[gl]=Interface para o sintetizador de voz
 GenericName[he]=Speech Synthesizer Frontend
 GenericName[hi]=स्पीच सिंथेसाइज़र फ्रण्टएंड
 GenericName[hne]=स्पीच सिंथेसाइजर फ्रन्टवड
-GenericName[hu]=Beszédszintetizátor
+GenericName[hu]=Beszédszintetizátor előtétprogram
 GenericName[is]=Viðmót á talgerfilinn
 GenericName[it]=Interfaccia grafica per il sintetizzatore vocale
 GenericName[ja]=スピーチシンセサイザーのフロントエンド
