SVN_SILENT made messages (.desktop file)
svn path=/branches/KDE/4.5/kdeaccessibility/kmouth/; revision=1152434

--- a/books/de.desktop
+++ b/books/de.desktop
@@ -58,6 +58,7 @@ Name[sr@latin]=nemački
 Name[sv]=Tyska
 Name[ta]=ஜெர்மன்
 Name[tg]=Немисӣ
+Name[th]=ภาษาเยอรมัน
 Name[tr]=Almanca
 Name[uk]=Німецька
 Name[uz]=Olmoncha
