--- a/books/en.desktop
+++ b/books/en.desktop
@@ -59,6 +59,7 @@ Name[sr@latin]=engleski
 Name[sv]=Engelska
 Name[ta]=ஆங்கிலம்
 Name[tg]=Англисӣ
+Name[th]=ภาษาอังกฤษ
 Name[tr]=İngilizce
 Name[uk]=Англійська
 Name[uz]=Inglizcha
