--- a/books/nl.desktop
+++ b/books/nl.desktop
@@ -57,6 +57,7 @@ Name[sr@ijekavianlatin]=holandski
 Name[sr@latin]=holandski
 Name[sv]=Holländska
 Name[tg]=Немисӣ
+Name[th]=ภาษาดัทช์
 Name[tr]=Flemenkçe
 Name[uk]=Голландська
 Name[vi]=Tiếng Hà Lan
