--- a/kmouth.desktop
+++ b/kmouth.desktop
@@ -64,6 +64,7 @@ Name[sr@latin]=K‑usta
 Name[sv]=Kmouth
 Name[ta]=K வாய்
 Name[tg]=KДаҳон
+Name[th]=ส่งเสียงพูด-K
 Name[tr]=KMouth
 Name[uk]=KMouth
 Name[vi]=Mồm K
@@ -126,6 +127,7 @@ GenericName[sr@latin]=Pročelje za sintetizatore govora
 GenericName[sv]=Gränssnitt för talsyntes
 GenericName[ta]=Speech Synthesizer Frontend
 GenericName[tg]=Сухани Синтезатори Пешбуда
+GenericName[th]=ฟร้อนต์เอนด์สำหรับสังเคราะห์คำพูด
 GenericName[tr]=Konuşma Sentezleyici Arayüzü
 GenericName[uk]=Графічний інтерфейс синтезатора мовлення
 GenericName[vi]=Giao diện Tổng hợp Giọng nói
