--- a/books/sv.desktop
+++ b/books/sv.desktop
@@ -59,6 +59,7 @@ Name[sr@latin]=švedski
 Name[sv]=Svenska
 Name[ta]=ஸ்வீடிஷ்
 Name[tg]=Шведӣ
+Name[th]=ภาษาสวีเดน
 Name[tr]=İsveççe
 Name[uk]=Шведська
 Name[uz]=Shvedcha
