SVN_SILENT made messages (.desktop file)
svn path=/branches/KDE/4.5/kdeaccessibility/kmouth/; revision=1174634

--- a/kmouth.desktop
+++ b/kmouth.desktop
@@ -102,7 +102,7 @@ GenericName[ja]=スピーチシンセサイザーのフロントエンド
 GenericName[km]= ផ្នែក​ខាង​មុខ​កម្មវិធី​សង្គ្រោះ​ការ​និយាយ
 GenericName[ko]=음성 합성기 프론트엔드
 GenericName[ku]=Pêşrûyê Yekkirina Axaftinê
-GenericName[lt]=Kalbos sintezatoriaus naudotojo sąsaja
+GenericName[lt]=Kalbos sintezatoriaus vartotojo sąsaja
 GenericName[lv]=Skaņas sintizatora priekšpuse
 GenericName[mk]=Преден крај на синтисајзерот за говор
 GenericName[ml]=സംസാരസംയോജനത്തിനുള പ്രത്യ‌ക്ഷഉപാധി
