--- a/kmouth.desktop
+++ b/kmouth.desktop
@@ -114,7 +114,7 @@ GenericName[pa]=ਬੋਲੀ ਸੰਸਲੇਸ਼ਣ ਫਰੰਟ-ਐਂਡ
 GenericName[pl]=Program obsługujący syntezator mowy
 GenericName[pt]=Interface do Sintetizador de Fala
 GenericName[pt_BR]=Interface do sintetizador de voz
-GenericName[ro]=Interfaţă pentru sinteză vocală
+GenericName[ro]=Interfață pentru sinteză vocală
 GenericName[ru]=Интерфейс к синтезаторам речи
 GenericName[sk]=Rozhranie pre syntezátor reči
 GenericName[sl]=Vmesnik za sintezo govora
