SVN_SILENT made messages (.desktop file)
svn path=/branches/KDE/4.6/kdeaccessibility/kmouth/; revision=1218768

--- a/books/de.desktop
+++ b/books/de.desktop
@@ -29,6 +29,7 @@ Name[hu]=Német
 Name[is]=Þýska
 Name[it]=Tedesco
 Name[ja]=ドイツ語
+Name[kk]=Немісше
 Name[km]=អាល្លឺម៉ង់
 Name[ko]=독일어
 Name[ku]=Almanî
