--- a/books/nl.desktop
+++ b/books/nl.desktop
@@ -29,6 +29,7 @@ Name[hu]=Holland
 Name[is]=Hollenska
 Name[it]=Olandese
 Name[ja]=オランダ語
+Name[kk]=Голландша
 Name[km]=ហុល្លង់​
 Name[ko]=네덜란드어
 Name[ku]=Felemenkî
