--- a/kmouth.desktop
+++ b/kmouth.desktop
@@ -34,6 +34,7 @@ Name[hu]=KMouth
 Name[is]=KMunnur
 Name[it]=KMouth
 Name[ja]=KMouth
+Name[kk]=KMouth
 Name[km]= KMouth
 Name[ko]=KMouth
 Name[ku]=KMouth
@@ -97,6 +98,7 @@ GenericName[hu]=Beszédszintetizátor előtétprogram
 GenericName[is]=Viðmót á talgerfilinn
 GenericName[it]=Interfaccia grafica per il sintetizzatore vocale
 GenericName[ja]=スピーチシンセサイザーのフロントエンド
+GenericName[kk]=Дауыс синтезаторының интерфейсі
 GenericName[km]= ផ្នែក​ខាង​មុខ​កម្មវិធី​សង្គ្រោះ​ការ​និយាយ
 GenericName[ko]=음성 합성기 프론트엔드
 GenericName[ku]=Pêşrûyê Yekkirina Axaftinê
