--- a/books/en.desktop
+++ b/books/en.desktop
@@ -30,6 +30,7 @@ Name[hu]=Angol
 Name[is]=Enska
 Name[it]=Inglese
 Name[ja]=英語
+Name[kk]=Ағылшынша
 Name[km]=អង់គ្លេស​
 Name[ko]=영어
 Name[ku]=Îngilîzî
