--- a/books/sv.desktop
+++ b/books/sv.desktop
@@ -30,6 +30,7 @@ Name[hu]=Svéd
 Name[is]=Sænska
 Name[it]=Svedese
 Name[ja]=スウェーデン語
+Name[kk]=Шведше
 Name[km]=ស៊ុយអែដ
 Name[ko]=스웨덴어
 Name[ku]=Swêdî
