--- a/books/nl.desktop
+++ b/books/nl.desktop
@@ -8,7 +8,7 @@ Name[bg]=Холандски
 Name[br]=Nederlandeg
 Name[ca]=Holandès
 Name[ca@valencia]=Holandés
-Name[cs]=Holandsky
+Name[cs]=Nizozemsky
 Name[cy]=Iseldireg
 Name[da]=Hollandsk
 Name[de]=Niederländisch
