move documentation into app folders
svn path=/trunk/KDE/kdeaccessibility/doc/kmouth/; revision=1227521

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,6 +23,7 @@ kde4_add_ui_files(libwordcompletion_SRCS
 	./wordcompletion/kdedocsourceui.ui
 	./wordcompletion/wordcompletionui.ui )
 
+add_subdirectory( doc )
 add_subdirectory( icons ) 
 add_subdirectory( phrasebook ) 
 add_subdirectory( books ) 
