SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdeaccessibility/kmouth/; revision=1230847

--- a/books/de.desktop
+++ b/books/de.desktop
@@ -5,6 +5,7 @@ Name[ast]=Alemán
 Name[be]=Нямецкая
 Name[bg]=Немски
 Name[br]=Alamaneg
+Name[bs]=njemački
 Name[ca]=Alemany
 Name[ca@valencia]=Alemany
 Name[cs]=Německy
