--- a/books/nl.desktop
+++ b/books/nl.desktop
@@ -6,6 +6,7 @@ Name[ast]=Holandés
 Name[be]=Галандская
 Name[bg]=Холандски
 Name[br]=Nederlandeg
+Name[bs]=holandski
 Name[ca]=Holandès
 Name[ca@valencia]=Holandés
 Name[cs]=Nizozemsky
