--- a/books/sv.desktop
+++ b/books/sv.desktop
@@ -6,6 +6,7 @@ Name[ast]=Suecu
 Name[be]=Шведская
 Name[bg]=Шведски
 Name[br]=Svedeg
+Name[bs]=švedski
 Name[ca]=Suec
 Name[ca@valencia]=Suec
 Name[cs]=Švédsky
