SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdeaccessibility/kmouth/; revision=1230981

--- a/books/de.desktop
+++ b/books/de.desktop
@@ -61,6 +61,7 @@ Name[sv]=Tyska
 Name[ta]=ஜெர்மன்
 Name[tg]=Немисӣ
 Name[tr]=Almanca
+Name[ug]=گېرمانچە
 Name[uk]=Німецька
 Name[uz]=Olmoncha
 Name[uz@cyrillic]=Олмонча
