--- a/books/en.desktop
+++ b/books/en.desktop
@@ -62,6 +62,7 @@ Name[sv]=Engelska
 Name[ta]=ஆங்கிலம்
 Name[tg]=Англисӣ
 Name[tr]=İngilizce
+Name[ug]=ئىنگلىزچە
 Name[uk]=Англійська
 Name[uz]=Inglizcha
 Name[uz@cyrillic]=Инглизча
