--- a/books/nl.desktop
+++ b/books/nl.desktop
@@ -60,6 +60,7 @@ Name[sr@latin]=holandski
 Name[sv]=Holländska
 Name[tg]=Немисӣ
 Name[tr]=Flemenkçe
+Name[ug]=گوللاندىيەچە
 Name[uk]=Голландська
 Name[vi]=Tiếng Hà Lan
 Name[x-test]=xxDutchxx
