--- a/books/sv.desktop
+++ b/books/sv.desktop
@@ -62,6 +62,7 @@ Name[sv]=Svenska
 Name[ta]=ஸ்வீடிஷ்
 Name[tg]=Шведӣ
 Name[tr]=İsveççe
+Name[ug]=شۋېدچە
 Name[uk]=Шведська
 Name[uz]=Shvedcha
 Name[uz@cyrillic]=Шведча
