--- a/kmouth.desktop
+++ b/kmouth.desktop
@@ -66,6 +66,7 @@ Name[sv]=Kmouth
 Name[ta]=K வாய்
 Name[tg]=KДаҳон
 Name[tr]=KMouth
+Name[ug]=KMouth
 Name[uk]=KMouth
 Name[vi]=Mồm K
 Name[x-test]=xxKMouthxx
@@ -130,6 +131,7 @@ GenericName[sv]=Gränssnitt för talsyntes
 GenericName[ta]=Speech Synthesizer Frontend
 GenericName[tg]=Сухани Синтезатори Пешбуда
 GenericName[tr]=Konuşma Sentezleyici Arayüzü
+GenericName[ug]=ئاۋاز بىرىكتۈرگۈچ ئالدىنقى ئۇچى
 GenericName[uk]=Графічний інтерфейс синтезатора мовлення
 GenericName[vi]=Giao diện Tổng hợp Giọng nói
 GenericName[x-test]=xxSpeech Synthesizer Frontendxx
