SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdeaccessibility/kmouth/; revision=1231181

--- a/books/en.desktop
+++ b/books/en.desktop
@@ -54,6 +54,7 @@ Name[ro]=Engleză
 Name[ru]=Английский
 Name[sk]=Anglicky
 Name[sl]=angleško
+Name[sq]=Anglisht
 Name[sr]=енглески
 Name[sr@ijekavian]=енглески
 Name[sr@ijekavianlatin]=engleski
