--- a/books/nl.desktop
+++ b/books/nl.desktop
@@ -53,6 +53,7 @@ Name[ro]=Olandeză
 Name[ru]=Голландский
 Name[sk]=Holandsky
 Name[sl]=Nizozemsko
+Name[sq]=Hollandeze
 Name[sr]=холандски
 Name[sr@ijekavian]=холандски
 Name[sr@ijekavianlatin]=holandski
