--- a/books/sv.desktop
+++ b/books/sv.desktop
@@ -54,6 +54,7 @@ Name[ro]=Suedeză
 Name[ru]=Шведский
 Name[sk]=Švédsky
 Name[sl]=švedsko
+Name[sq]=Suedeze
 Name[sr]=шведски
 Name[sr@ijekavian]=шведски
 Name[sr@ijekavianlatin]=švedski
