--- a/kmouth.desktop
+++ b/kmouth.desktop
@@ -58,6 +58,7 @@ Name[ro]=Vorbitor
 Name[ru]=KMouth
 Name[sk]=KMouth
 Name[sl]=KMouth
+Name[sq]=KMouth
 Name[sr]=К‑уста
 Name[sr@ijekavian]=К‑уста
 Name[sr@ijekavianlatin]=K‑usta
@@ -123,6 +124,7 @@ GenericName[ro]=Interfață pentru sinteză vocală
 GenericName[ru]=Интерфейс к синтезаторам речи
 GenericName[sk]=Rozhranie pre syntezátor reči
 GenericName[sl]=Vmesnik za sintezo govora
+GenericName[sq]=Sintetizues Ballor i Fjalimit
 GenericName[sr]=Прочеље за синтетизаторе говора
 GenericName[sr@ijekavian]=Прочеље за синтетизаторе говора
 GenericName[sr@ijekavianlatin]=Pročelje za sintetizatore govora
