--- a/books/de.desktop
+++ b/books/de.desktop
@@ -53,6 +53,7 @@ Name[ro]=Germană
 Name[ru]=Немецкий
 Name[sk]=Nemecky
 Name[sl]=nemško
+Name[sq]=Gjermanisht
 Name[sr]=немачки
 Name[sr@ijekavian]=њемачки
 Name[sr@ijekavianlatin]=njemački
