--- a/kmouth.desktop
+++ b/kmouth.desktop
@@ -106,7 +106,7 @@ GenericName[kk]=Дауыс синтезаторының интерфейсі
 GenericName[km]= ផ្នែក​ខាង​មុខ​កម្មវិធី​សង្គ្រោះ​ការ​និយាយ
 GenericName[ko]=음성 합성기 프론트엔드
 GenericName[ku]=Pêşrûyê Yekkirina Axaftinê
-GenericName[lt]=Kalbos sintezatoriaus vartotojo sąsaja
+GenericName[lt]=Kalbos sintezatoriaus naudotojo sąsaja
 GenericName[lv]=Skaņas sintizatora priekšpuse
 GenericName[mk]=Преден крај на синтисајзерот за говор
 GenericName[ml]=സംസാരസംയോജനത്തിനുള പ്രത്യ‌ക്ഷഉപാധി
