SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdeaccessibility/kmouth/; revision=1235112

--- a/books/sv.desktop
+++ b/books/sv.desktop
@@ -63,7 +63,7 @@ Name[sv]=Svenska
 Name[ta]=ஸ்வீடிஷ்
 Name[tg]=Шведӣ
 Name[tr]=İsveççe
-Name[ug]=شۋېدچە
+Name[ug]=شىۋېدچە
 Name[uk]=Шведська
 Name[uz]=Shvedcha
 Name[uz@cyrillic]=Шведча
