SVN_SILENT made messages (.desktop file)
svn path=/branches/KDE/4.7/kdeaccessibility/kmouth/; revision=1240698

--- a/books/de.desktop
+++ b/books/de.desktop
@@ -61,6 +61,7 @@ Name[sr@latin]=nemački
 Name[sv]=Tyska
 Name[ta]=ஜெர்மன்
 Name[tg]=Немисӣ
+Name[th]=เยอรมัน
 Name[tr]=Almanca
 Name[ug]=گېرمانچە
 Name[uk]=Німецька
