--- a/books/en.desktop
+++ b/books/en.desktop
@@ -62,6 +62,7 @@ Name[sr@latin]=engleski
 Name[sv]=Engelska
 Name[ta]=ஆங்கிலம்
 Name[tg]=Англисӣ
+Name[th]=อังกฤษ
 Name[tr]=İngilizce
 Name[ug]=ئىنگلىزچە
 Name[uk]=Англійська
