--- a/books/nl.desktop
+++ b/books/nl.desktop
@@ -60,6 +60,7 @@ Name[sr@ijekavianlatin]=holandski
 Name[sr@latin]=holandski
 Name[sv]=Holländska
 Name[tg]=Немисӣ
+Name[th]=ดัตช์
 Name[tr]=Flemenkçe
 Name[ug]=گوللاندىيەچە
 Name[uk]=Голландська
