--- a/kmouth.desktop
+++ b/kmouth.desktop
@@ -66,6 +66,7 @@ Name[sr@latin]=K‑usta
 Name[sv]=Kmouth
 Name[ta]=K வாய்
 Name[tg]=KДаҳон
+Name[th]=พูดออกเสียง-K
 Name[tr]=KMouth
 Name[ug]=KMouth
 Name[uk]=KMouth
@@ -132,6 +133,7 @@ GenericName[sr@latin]=Pročelje za sintetizatore govora
 GenericName[sv]=Gränssnitt för talsyntes
 GenericName[ta]=Speech Synthesizer Frontend
 GenericName[tg]=Сухани Синтезатори Пешбуда
+GenericName[th]=ฟร้อนต์เอนด์สำหรับเครื่องสังเคราะห์คำพูด
 GenericName[tr]=Konuşma Sentezleyici Arayüzü
 GenericName[ug]=ئاۋاز بىرىكتۈرگۈچ ئالدىنقى ئۇچى
 GenericName[uk]=Графічний інтерфейс синтезатора мовлення
