--- a/books/sv.desktop
+++ b/books/sv.desktop
@@ -62,6 +62,7 @@ Name[sr@latin]=švedski
 Name[sv]=Svenska
 Name[ta]=ஸ்வீடிஷ்
 Name[tg]=Шведӣ
+Name[th]=สวีเดน
 Name[tr]=İsveççe
 Name[ug]=شۋېدچە
 Name[uk]=Шведська
