SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdeaccessibility/kmouth/; revision=1241617

--- a/books/de.desktop
+++ b/books/de.desktop
@@ -26,6 +26,7 @@ Name[gl]=Alemán
 Name[he]=גרמנית
 Name[hi]=जर्मन
 Name[hne]=जर्मन
+Name[hr]=Njemački
 Name[hu]=Német
 Name[is]=Þýska
 Name[it]=Tedesco
