--- a/books/en.desktop
+++ b/books/en.desktop
@@ -27,6 +27,7 @@ Name[gl]=Inglés
 Name[he]=אנגלית
 Name[hi]=अंग्रेज़ी
 Name[hne]=अंगरेजी
+Name[hr]=Engleski
 Name[hu]=Angol
 Name[is]=Enska
 Name[it]=Inglese
