--- a/books/nl.desktop
+++ b/books/nl.desktop
@@ -26,6 +26,7 @@ Name[gl]=Holandés
 Name[he]=דנית
 Name[hi]=डच
 Name[hne]=डच
+Name[hr]=Nizozemski
 Name[hu]=Holland
 Name[is]=Hollenska
 Name[it]=Olandese
