--- a/books/sv.desktop
+++ b/books/sv.desktop
@@ -27,6 +27,7 @@ Name[gl]=Sueco
 Name[he]=שוודית
 Name[hi]=स्वीडिश
 Name[hne]=स्वीडिस
+Name[hr]=Švedski
 Name[hu]=Svéd
 Name[is]=Sænska
 Name[it]=Svedese
