--- a/kmouth.desktop
+++ b/kmouth.desktop
@@ -31,6 +31,7 @@ Name[gl]=KMouth
 Name[he]=KMouth
 Name[hi]=के-माउथ
 Name[hne]=के-माउथ
+Name[hr]=KMouth
 Name[hu]=KMouth
 Name[is]=KMunnur
 Name[it]=KMouth
@@ -98,6 +99,7 @@ GenericName[gl]=Interface para o sintetizador de voz
 GenericName[he]=Speech Synthesizer Frontend
 GenericName[hi]=स्पीच सिंथेसाइज़र फ्रण्टएंड
 GenericName[hne]=स्पीच सिंथेसाइजर फ्रन्टवड
+GenericName[hr]=Pristupni dio sintetizatora govora
 GenericName[hu]=Beszédszintetizátor előtétprogram
 GenericName[is]=Viðmót á talgerfilinn
 GenericName[it]=Interfaccia grafica per il sintetizzatore vocale
