--- a/kmouth.desktop
+++ b/kmouth.desktop
@@ -85,7 +85,7 @@ GenericName[cs]=Rozhraní hlasového syntetizátoru
 GenericName[cy]=Blaen-wyneb Syntheseisydd Lleferydd
 GenericName[da]=Forende til tale-synthesizer
 GenericName[de]=Oberfläche für Sprachsynthesizer
-GenericName[el]=Συνθέτης ομιλίας
+GenericName[el]=Περιβάλλον σύνθεσης ομιλίας
 GenericName[en_GB]=Speech Synthesiser Frontend
 GenericName[eo]=Fasado Por Parolsintezilo
 GenericName[es]=Interfaz de usuario para síntesis de voz
