SVN_SILENT made messages (.desktop file)
svn path=/branches/KDE/4.7/kdeaccessibility/kmouth/; revision=1247360

--- a/kmouth.desktop
+++ b/kmouth.desktop
@@ -137,7 +137,7 @@ GenericName[ta]=Speech Synthesizer Frontend
 GenericName[tg]=Сухани Синтезатори Пешбуда
 GenericName[th]=ฟร้อนต์เอนด์สำหรับเครื่องสังเคราะห์คำพูด
 GenericName[tr]=Konuşma Sentezleyici Arayüzü
-GenericName[ug]=ئاۋاز بىرىكتۈرگۈچ ئالدىنقى ئۇچى
+GenericName[ug]=ئاۋاز بىرىكتۈرگۈچ ئالدى ئۇچى
 GenericName[uk]=Графічний інтерфейс синтезатора мовлення
 GenericName[vi]=Giao diện Tổng hợp Giọng nói
 GenericName[x-test]=xxSpeech Synthesizer Frontendxx
