SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdeaccessibility/kmouth/; revision=1247590

--- a/kmouth.desktop
+++ b/kmouth.desktop
@@ -135,7 +135,7 @@ GenericName[sv]=Gränssnitt för talsyntes
 GenericName[ta]=Speech Synthesizer Frontend
 GenericName[tg]=Сухани Синтезатори Пешбуда
 GenericName[tr]=Konuşma Sentezleyici Arayüzü
-GenericName[ug]=ئاۋاز بىرىكتۈرگۈچ ئالدىنقى ئۇچى
+GenericName[ug]=ئاۋاز بىرىكتۈرگۈچ ئالدى ئۇچى
 GenericName[uk]=Графічний інтерфейс синтезатора мовлення
 GenericName[vi]=Giao diện Tổng hợp Giọng nói
 GenericName[x-test]=xxSpeech Synthesizer Frontendxx
