--- a/kmouth.desktop
+++ b/kmouth.desktop
@@ -79,7 +79,7 @@ GenericName[ar]=واجهة تحليل النطق
 GenericName[ast]=Interface d'usuariu pa síntesis de voz
 GenericName[bg]=Синтезатор на глас
 GenericName[bs]=Prikaz sintetizatora govora
-GenericName[ca]=Interfície per al sintetitzador de veu
+GenericName[ca]=Frontal del sintetitzador de veu
 GenericName[ca@valencia]=Interfície per al sintetitzador de veu
 GenericName[cs]=Rozhraní hlasového syntetizátoru
 GenericName[cy]=Blaen-wyneb Syntheseisydd Lleferydd
