SVN_SILENT made messages (.desktop file)

--- a/kmouth.desktop
+++ b/kmouth.desktop
@@ -91,7 +91,7 @@ GenericName[eo]=Fasado Por Parolsintezilo
 GenericName[es]=Interfaz de usuario para síntesis de voz
 GenericName[et]=Kõnesüntesaator
 GenericName[eu]=Hizkera-sintetizadorearen interfazea
-GenericName[fa]=پایانۀ ترکیب‌دهندۀ گفتار
+GenericName[fa]=پایانه ترکیب‌دهنده گفتار
 GenericName[fi]=Puhesyntetisaattorin käyttöliittymä
 GenericName[fr]=Interface graphique de synthèse vocale
 GenericName[ga]=Comhéadan Sintéiseora Cainte
