SVN_SILENT made messages (.desktop file)

--- a/kmouth.desktop
+++ b/kmouth.desktop
@@ -80,7 +80,7 @@ GenericName[ast]=Interface d'usuariu pa síntesis de voz
 GenericName[bg]=Синтезатор на глас
 GenericName[bs]=Prikaz sintetizatora govora
 GenericName[ca]=Frontal del sintetitzador de veu
-GenericName[ca@valencia]=Interfície per al sintetitzador de veu
+GenericName[ca@valencia]=Frontal del sintetitzador de veu
 GenericName[cs]=Rozhraní hlasového syntetizátoru
 GenericName[cy]=Blaen-wyneb Syntheseisydd Lleferydd
 GenericName[da]=Forende til tale-synthesizer
