SVN_SILENT made messages (.desktop file)

--- a/kmouth.desktop
+++ b/kmouth.desktop
@@ -11,6 +11,7 @@ Name[ast]=KMouth
 Name[be]=KMouth
 Name[bg]=KMouth
 Name[br]=KMouth
+Name[bs]=KMouth
 Name[ca]=KMouth
 Name[ca@valencia]=KMouth
 Name[cs]=KMouth
@@ -77,6 +78,7 @@ GenericName=Speech Synthesizer Frontend
 GenericName[ar]=واجهة تحليل النطق
 GenericName[ast]=Interface d'usuariu pa síntesis de voz
 GenericName[bg]=Синтезатор на глас
+GenericName[bs]=Prikaz sintetizatora govora
 GenericName[ca]=Frontal del sintetitzador de veu
 GenericName[ca@valencia]=Frontal del sintetitzador de veu
 GenericName[cs]=Rozhraní hlasového syntetizátoru
