SVN_SILENT made messages (.desktop file)

--- a/books/de.desktop
+++ b/books/de.desktop
@@ -39,6 +39,7 @@ Name[lt]=Vokiečių
 Name[lv]=Vācu
 Name[mk]=Германски
 Name[ml]=ജര്‍മ്മന്‍
+Name[mr]=जर्मन
 Name[ms]=Jerman
 Name[nb]=Tysk
 Name[nds]=Hoochdüütsch
