--- a/books/en.desktop
+++ b/books/en.desktop
@@ -40,6 +40,7 @@ Name[lt]=Anglų
 Name[lv]=Angļu
 Name[mk]=Англиски
 Name[ml]=ഇംഗ്ലീഷ്
+Name[mr]=इंग्रजी
 Name[ms]=Inggeris
 Name[nb]=Engelsk
 Name[nds]=Engelsch
