--- a/books/nl.desktop
+++ b/books/nl.desktop
@@ -39,6 +39,7 @@ Name[lt]=Olandų
 Name[lv]=Holandiešu
 Name[mk]=Холандски
 Name[ml]=ഡച്ച്
+Name[mr]=डच
 Name[ms]=Belanda
 Name[nb]=Nederlandsk
 Name[nds]=Nedderlannsch
