--- a/kmouth.desktop
+++ b/kmouth.desktop
@@ -44,6 +44,7 @@ Name[lt]=KMouth
 Name[lv]=KMouth
 Name[mk]=KMouth
 Name[ml]=കെമൌത്ത്
+Name[mr]=के-माउथ
 Name[ms]=KMouth
 Name[nb]=KMouth
 Name[nds]=KMouth
@@ -112,6 +113,7 @@ GenericName[lt]=Kalbos sintezatoriaus naudotojo sąsaja
 GenericName[lv]=Skaņas sintizatora priekšpuse
 GenericName[mk]=Преден крај на синтисајзерот за говор
 GenericName[ml]=സംസാരസംയോജനത്തിനുള പ്രത്യ‌ക്ഷഉപാധി
+GenericName[mr]=स्पीच सिंथेसाइज़र फ्रंटएन्ड
 GenericName[ms]=Antaramuka Pensintesis Pertuturan
 GenericName[nb]=Brukerflate for talesystem
 GenericName[nds]=Böversiet för de Blicksnuut
