--- a/books/sv.desktop
+++ b/books/sv.desktop
@@ -40,6 +40,7 @@ Name[lt]=Švedų
 Name[lv]=Zviedru
 Name[mk]=Шведски
 Name[ml]=സ്വീഡിഷ്
+Name[mr]=स्वीडिश
 Name[ms]=Sweden
 Name[nb]=Svensk
 Name[nds]=Sweedsch
