Split initialphrasebookwidget into it's own files. Moved standardBooks from PhraseBookDialog class to PhraseBook class. Moved StandardBook and StandardBookList to PhraseBook header.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,6 +15,7 @@ add_definitions (-DQT3_SUPPORT)
 set(libphrasebook_SRCS
 	./phrasebook/phrasebookparser.cpp
 	./phrasebook/phrasebookdialog.cpp
+        ./phrasebook/initialphrasebookwidget.cpp
 	./phrasebook/phrasebook.cpp
 	)
 
