--- a/icons/CMakeLists.txt
+++ b/icons/CMakeLists.txt
@@ -1,13 +1,13 @@
 
-add_subdirectory( history ) 
-add_subdirectory( phrase ) 
-add_subdirectory( phrasebook ) 
-add_subdirectory( app ) 
+add_subdirectory( history )
+add_subdirectory( phrase )
+add_subdirectory( phrasebook )
+add_subdirectory( app )
 
 
 
 
 ########### install files ###############
 
-kde4_install_icons( ${DATA_INSTALL_DIR}/kmouth/icons  )
+kde4_install_icons( ${ICON_INSTALL_DIR} )
 #
