--- a/kmouthui.rc
+++ b/kmouthui.rc
@@ -1,5 +1,6 @@
-<!DOCTYPE kpartgui>
-<kpartgui name="kmouth" version="1">
+<?xml version="1.0"?>
+<!DOCTYPE gui SYSTEM "kpartgui.dtd">
+<gui name="kmouth" version="1">
 <MenuBar>
   <Menu name="file" noMerge="1"><text>&amp;File</text>
     <Action name="file_open"/>
@@ -90,4 +91,4 @@
     <Action name="edit_copy"/>
     <Action name="edit_paste"/>
 </ToolBar>
-</kpartgui>
+</gui>
