--- a/phrasebookdialogui.rc
+++ b/phrasebookdialogui.rc
@@ -1,5 +1,6 @@
-<!DOCTYPE kpartgui>
-<kpartgui name="kmouth" version="1">
+<?xml version="1.0"?>
+<!DOCTYPE gui SYSTEM "kpartgui.dtd">
+<gui name="kmouth" version="1">
 
 <MenuBar>
   <Menu name="file" noMerge="1"><text>&amp;File</text>
@@ -61,4 +62,4 @@
     <Action name="edit_delete"/>
 </ToolBar>
 
-</kpartgui>
+</gui>
